--- a/wiki/MongoDBStartUp.wiki
+++ b/wiki/MongoDBStartUp.wiki
@@ -1,4 +1,4 @@
-#labels MongoDB,HOWTOSTARTMongoDBonWindows
+#labels MongoDB,MongoDB-Windows
 = HOW TO START MongoDB on Windows= 
 This page tells the detail process to start MongoDB at windows installed machine. 
 
