Edited wiki page MongoDBStartUp through web user interface.

--- a/wiki/MongoDBStartUp.wiki
+++ b/wiki/MongoDBStartUp.wiki
@@ -1,4 +1,4 @@
-#labels MongoDB,MongoDBWindows
+#labels MongoDB,MongoDBWindows,MongoDB-configuration
 = HOW TO START MongoDB on Windows= 
 This page tells the detail process to start MongoDB at windows installed machine. 
 
