Edited wiki page FileRoutingUsingCamelAndActiveMQ through web user interface.

--- a/wiki/FileRoutingUsingCamelAndActiveMQ.wiki
+++ b/wiki/FileRoutingUsingCamelAndActiveMQ.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#File routing and processing using Apache Camel and ActiveMQ.
 
 = File Processing =
 
@@ -12,4 +12,3 @@ When we run Startup.java as java application, 2 consumers for the above routes w
 On the other end, file will be retrieved from the queue "activemq:httpinfile " using Apache Camel, and sent storage handler to save the file into the database (MongoDB)as it is. At the same time we will also route this file to new queue “seda:import” from where it will be retrieved for further processing “like splitting the file data to canonical fields, records and chunks”. Now processed data is ready to be saved in MongoDB, So once again it will be passed to storage handler to store it into the database. 
 
 Camel comes into action and now parallel processing starts, sending processed data to storage (MongoDB) and for further processing at Hadoop at the same time.
-
