Edited wiki page FileRoutingUsingCamelAndActiveMQ through web user interface.

--- a/wiki/FileRoutingUsingCamelAndActiveMQ.wiki
+++ b/wiki/FileRoutingUsingCamelAndActiveMQ.wiki
@@ -1,4 +1,4 @@
-#File routing and processing using Apache Camel and ActiveMQ.
+File routing and processing using Apache Camel and ActiveMQ.
 
 = File Processing =
 
