--- a/wiki/HadoopWindows.wiki
+++ b/wiki/HadoopWindows.wiki
@@ -16,7 +16,8 @@ This wiki gives a step by step tutorial about installing Hadoop in Windows-run a
 C:\cygwin64\bin
 }}}
   * *STEP 2)* Install SSH Server from [https://code.google.com/p/bigdata-hadoop-camel-integration/wiki/OpenSSHServerWindowsInstallation here] .
-  * *STEP 3)* create the folder
+
+  * *STEP 3)* create the folder for JAVA_HOME e.g.
 {{{
 C:\jdk1.6.0_38
 }}}
